@@ -834,7 +834,7 @@ void PainterOpenVG::clipPath(const Path& path, PainterOpenVG::ClipOperation mask
     vgSeti(VG_FILL_RULE, toVGFillRule(clipRule));
     vgRenderToMask(path.platformPath()->vgPath(), VG_FILL_PATH, (VGMaskOperation) maskOp);
     ASSERT_VG_NO_ERROR();
-#elseif
+#else
     notImplemented();
 #endif
 }
